<resources>
    <string name="app_name">handyword</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_word_cards">WordCardsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_quiz">QuizActivity</string>

    <string name="sample_text_question">question</string>
    <string name="sample_text_answer">answer</string>

    // Utils
    <string name="message_ok">OK</string>
    <string name="message_cancel">Cancel</string>

    <string name="menu_back_text">メニューに戻る</string>
    <string name="back_list_activity_text">一覧に戻る</string>

    <string name="title_chart">学習の記録</string>
    <string name="chart_item_not_learned">まだ覚えていない単語</string>
    <string name="chart_item_learned">覚えた単語</string>

    <string name="word_type_all">すべての単語</string>
    <string name="action_add">単語の追加</string>
    <string name="main_menu_question">単語練習</string>
    <string name="title_activity_edit_word_card">EditWordCardActivity</string>
    <string name="title_activity_word_cards_list">WordCardsListActivity</string>
    <string name="title_activity_word_card_detail">WordCardDetailActivity</string>

    // For delete word card
    <string name="delete_alert_title">削除の確認</string>
    <string name="delete_alert_message">を削除してもよろしいですか？</string>
    <string name="delete_alert_ok">OK</string>
    <string name="delete_alert_Cancel">Cancel</string>

    // For register word card activity
    <string name="register_word_translate_dialog_title">翻訳中</string>
    <string name="register_word_translate_dialog_message">しばらくお待ちください。</string>
    <string name="register_word_caution_dialog_title">確認</string>
    <string name="register_word_caution_dialog_message">作成中の単語帳を削除してもよろしいですか？</string>
    <string name="register_word_caution_error">通信に失敗しました。</string>
    <string name="register_word_success_register">単語を追加しました。</string>

    // For question word card activity
    <string name="question_word_activity_title">出題</string>
    <string name="question_word_display_button">表示</string>
    <string name="question_word_no_display_button">非表示</string>
    <string name="question_word_next_question_button">次の問題</string>

</resources>
