<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChartFragment">

    <TextView
        android:paddingTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_chart"
        android:textSize="36sp"/>

    <TextView
        android:paddingTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chart_item_learned"
        android:textSize="20sp"/>

    <TextView
        android:paddingTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chart_item_not_learned"
        android:textSize="20sp"/>

</LinearLayout>
